# pyins

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  rtd-requirements.txt  setup.py  version_1.0.md
.github/workflows/: build_and_test.yaml
doc/: .gitignore  api.rst  conf.py  design.rst  examples.rst  index.rst  requirements.txt  rtd-requirements.txt  todo.rst  tutorial.rst
examples/: 0_error_dynamics.ipynb  1_IMU_erreur_model.ipynb  2_INS_with_synthetic_data.ipynb  3_Table_Rotations.ipynb  4_Zero-velocity_update.ipynb  5_INS_with_real_data.ipynb  IMU_erreur_model.ipynb  Table_Rotations.ipynb  Zero-velocity_update.ipynb  error_dynamics.ipynb  helper.py  ideal_imu.ipynb  imu_calibration.ipynb  ins.ipynb  ins_gps.ipynb  ins_integrating_ideal_data.ipynb  monte_carlo.ipynb  real_data_processing.ipynb  tutorial_table_rotations.ipynb
examples/data/: EK97_2e28e528.csv  ReadMe.txt  gnss.csv
pyins/: __init__.py  _dcm_spline_solver.pyx  _integrate.pyx  _numba_integrate.py  align.py  coord.py  dcm.py  earth.py  error_model.py  error_models.py  filt.py  filters.py  imu_model.py  inertial_sensor.py  integrate.py  kalman.py  measurements.py  observations.py  sim.py  strapdown.py  transform.py  util.py
pyins/tests/: test_align.py  test_coord.py  test_dcm.py  test_earth.py  test_error_model.py  test_filt.py  test_filters.py  test_imu_model.py  test_inertial_sensor.py  test_integrate.py  test_kalman.py  test_numba_integrate.py  test_sim.py  test_strapdown.py  test_transform.py  test_util.py
(+2 files in other folders)
